--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -145,6 +145,16 @@
                         {
                                <!-- Dashboards -->
                         <li class="menu-item active open">
+                           
+                            <ul class="menu-sub">
+                                <li class="menu-item active">
+                                    <a href="~/QLBills/BanHangOff" class="menu-link">
+                                        <span class="mdi mdi-chart-line"></span>
+                                        <div data-i18n="Analytics">Bán Hàng </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>    <li class="menu-item active open">
                             <a href="javascript:void(0);" class="menu-link menu-toggle">
                                 <i class="menu-icon tf-icons mdi mdi-home-outline"></i>
                                 <div data-i18n="Dashboards">Home</div>
