--- a/APPVIEW/Views/Home/Index.cshtml
+++ b/APPVIEW/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
                                 <li><a href="@Url.ActionLink("details","home",new{id=item.Id})"><button><i class="ti-search"></i></button></a></li>
                                 <li><a href="@Url.ActionLink("Addtocart","cart",new{id=item.Id,Soluong=1})"><button><i class="ti-shopping-cart"></i></button></a></li>
                                 <li><button><i class="ti-heart"></i></button></li>
-                                <li><button> @Html.ActionLink("Mua hàng", "ViewBill", new { id=item.Id_Product }, new { style = "color:black;" })</button></li>
+                                <li><button> @Html.ActionLink("Mua ngay", "ViewBill", new { id = item.Id_Product }, new { style = "color:black;" })</button></li>
                             </ul>
                         </div>
                         <div class="card-body">
