--- a/APPVIEW/Views/Home/Details.cshtml
+++ b/APPVIEW/Views/Home/Details.cshtml
@@ -225,7 +225,7 @@
                                             if (pd.Id_Color == item.Id)
                                             {
                                                 lstC1.Add(pd.Id_Color);
-                                                <h5 style="display: inline-block; margin-right: 10px;">@item.Name mmm</h5>
+                                                <h5 style="display: inline-block; margin-right: 10px;">@item.Name</h5>
 
                                             }
                                         }
