--- a/APPVIEW/Views/Shared/_ReturnProducts.cshtml
+++ b/APPVIEW/Views/Shared/_ReturnProducts.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using System.Globalization;
+
 @foreach (var product in ViewBag.Products ?? Enumerable.Empty<APPDATA.Models.ProductDetail>())
 {
     <div class="col-md-6 col-lg-4">
@@ -16,7 +17,7 @@
             </div>
             <div class="card-body">
                 <h4 class="card-product__title"><a href="#">@product.ProductDetail.Name</a></h4>
-                <p class="card-product__price">$@product.ProductDetail.Price</p>
+                <p class="card-product__price">@product.ProductDetail.Price.ToString("C0", new CultureInfo("vi-VN"))</p>
             </div>
         </div>
     </div>
