--- a/APPVIEW/Views/Shared/_ReturnProducts.cshtml
+++ b/APPVIEW/Views/Shared/_ReturnProducts.cshtml
@@ -1,6 +1,13 @@
-﻿
+﻿@{
+    var p = new List<Guid>();
+}
 @foreach (var product in ViewBag.Products ?? Enumerable.Empty<APPDATA.Models.ProductDetail>())
 {
+    if (p.Any(c => c == product.ProductDetail.Id_Product))
+    {
+        continue;
+    }
+    p.Add(product.ProductDetail.Id_Product);
     <div class="col-md-6 col-lg-4">
         <div class="card text-center card-product">
             <div class="card-product__img">
