--- a/APPVIEW/Views/Voucher/Edit.cshtml
+++ b/APPVIEW/Views/Voucher/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ReduceForm" class="control-label"></label>
-                <input asp-for="ReduceForm" class="form-control" />
-                <span asp-validation-for="ReduceForm" class="text-danger"></span>
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
@@ -43,16 +43,16 @@
                 <input asp-for="DiscountAmount" class="form-control" />
                 <span asp-validation-for="DiscountAmount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Create_date" class="control-label"></label>
                 <input asp-for="Create_date" class="form-control" />
                 <span asp-validation-for="Create_date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+                </div>
+                <div class="form-group">
                 <label asp-for="Update_date" class="control-label"></label>
                 <input asp-for="Update_date" class="form-control" />
                 <span asp-validation-for="Update_date" class="text-danger"></span>
-            </div>
+                </div>*@
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
@@ -76,5 +76,5 @@
 
 @*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    }
 *@
